# optigy

./: Cargo.toml  README.md
benches/: sparsity_pattern.rs
demos/approximation/: approx.txt
demos/approximation/src/: main.rs
demos/gps_factor/: Cargo.toml
demos/gps_factor/src/: main.rs
demos/pose_graph_g2o/src/: main.rs
demos/slam-common/: Cargo.toml
demos/slam-common/src/: between_factor.rs  lib.rs  prior_factor.rs  se2.rs
demos/slam_2d/: Cargo.toml
demos/slam_2d/src/: gps_factor.rs  landmarks.rs  main.rs  state_variables.rs  vision_factor.rs
src/: lib.rs
src/core/: factor.rs  factors.rs  factors_container.rs  key.rs  loss_function.rs  mod.rs  variable.rs  variable_ordering.rs  variables.rs  variables_container.rs
src/factor_graph/: mod.rs
src/fixedlag/: marginalization.rs
src/linear/: linear_solver.rs  sparse_cholesky_solver.rs
src/nonlinear/: gauss_newton_optimizer.rs  levenberg_marquardt_optimizer.rs  linearization.rs  nonlinear_optimizer.rs  sparsity_pattern.rs
src/prelude/: mod.rs
src/viz/: graph_viz.rs
viz/: Cargo.toml
viz/src/: graph.rs
