[package]
name = "optigy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["demos/pose_graph_g2o", "demos/slam_2d", "demos/approximation", "demos/gps_factor"]
[dependencies]
nohash-hasher = "0.2.0"
nalgebra = {version="0.32.3", features=["compare"]}
nalgebra-sparse = {version="0.9.0", features=["compare"]}
num = "0.4.1"
simba = "0.8.1"
tynm = "0.1.8"
clarabel = "0.6.0" 
lazy_static = {version="1.4.0", optional=true}
random_color = {version="0.6.1", optional=true} 
prisma = {version="0.1.1", optional=true}
faer-sparse = "0.15.0"
faer-core = "0.15.0"
dyn-stack = { version = "0.10", default-features = false }
[dev-dependencies]
matrixcompare = "0.3.0"
criterion = { version = "0.4", features = ["html_reports"] }
lazy_static = {version="1.4.0"}
rand = {version="0.8.5"}
slam_common= { path = "demos/slam-common" }
[[bench]]
slam_common= { path = "../slam-common" }
name = "sparsity_pattern"
harness = false
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
