[package]
name = "slam_common"
version = "0.1.0"
edition = "2021"

workspace = "../../"
[dependencies]
optigy = { path = "../../" }
nalgebra = {version="0.32.3", features=["compare"]}
num = "0.4.1"
# manif = {path="../../../manif-rs"}
manif = {git="https://github.com/Lishen1/manif-rs.git", rev="32f2524"}

